--- a/templates/expenses/edit.html
+++ b/templates/expenses/edit.html
@@ -42,7 +42,7 @@
             {% if expense.paid %}
                 <a href="/expenses/unpay/{{ expense.id }}" class="btn_2 bg-yellow mb-4" style="border: none; width: 100%;">Não Paga</a>
             {% else %}
-                <a href="/expenses/pay/{{ expense.id }}" class="btn_2 bg-blue mb-4" style="border: none; width: 100%;">Não Paga</a>
+                <a href="/expenses/pay/{{ expense.id }}" class="btn_2 bg-blue mb-4" style="border: none; width: 100%;">Paga</a>
             {% endif %}
             <form action="/expenses/update/{{ expense.id }}" method="post">
                 <div class="mb-3">
@@ -58,7 +58,9 @@
                     <input type="date" class="form-control" name="due_date" value="{{ expense.due_date }}">
                 </div>
                 <button type="submit" class="btn_2 mb-3" style="border: none; width: 100%;">Enviar</button>
+                
             </form>
+        <a href="/expenses/delete/{{ expense.id }}" class="btn_2 bg-red" style="border: none; width: 100%;">Deletar</a>
         </div>
     </section>
 
